--- a/_nosotros.scss
+++ b/_nosotros.scss
@@ -1,5 +1,5 @@
 .marketing {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .btn-style {
@@ -7,4 +7,9 @@
   position: relative;
   left: 30px;
   border: none !important;
+}
+
+.row_centrado {
+  padding-left: 11%;
+  padding-bottom: 5%;
 }
