--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
 }
 
 .marketing {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .btn-style {
@@ -70,6 +70,11 @@
   position: relative;
   left: 30px;
   border: none !important;
+}
+
+.row_centrado {
+  padding-left: 11%;
+  padding-bottom: 5%;
 }
 
 @media only screen and (max-width: 1600px) {
